drop priviledges more reliably by re-querying the effective user id with
Sun Oct 22 22:21:44 2006 Tim Janik <timj@gtk.org>

        * launchers/suidmain.c: drop priviledges more reliably by re-querying
        the effective user id with geteuid() instead of just catching errors.

svn path=/trunk/; revision=4021

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Oct 22 22:21:44 2006  Tim Janik  <timj@gtk.org>
+
+	* launchers/suidmain.c: drop priviledges more reliably by re-querying
+	the effective user id with geteuid() instead of just catching errors.
+
 Sun Oct 22 14:31:48 2006  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* web/news.doxi: A summary of the things that happened since the last
