--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,8 @@
+Wed Oct 11 02:11:29 2006  Tim Janik  <timj@gtk.org>
+
+	* birnetutf8.hh: added utf8_align() and utf8_aligned() to step back
+	from the middle of an UTF-8 char.
+
 Sat Oct 21 19:02:47 2006  Tim Janik  <timj@gtk.org>
 
 	* birnettests.h (treport_generic): allow fixed portion of numbers
