Copied from davorgan.c, to start porting DavOrgan to C++.
Mon Oct 23 16:10:57 2006 Stefan Westerfeld <stefan@space.twc.de>

	* davorgan.idl:
	* davorgan.cc: Copied from davorgan.c, to start porting DavOrgan to
	C++.

svn path=/trunk/; revision=4037

--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,9 @@
+Mon Oct 23 16:10:57 2006  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* davorgan.idl:
+	* davorgan.cc: Copied from davorgan.c, to start porting DavOrgan to
+	C++.
+
 Sun Oct 22 01:35:37 2006  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* davorgan.c: Added a reset() function for the organ modules, which
