--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Oct 22 17:19:40 2006  Tim Janik  <timj@gtk.org>
+
+	* web/news.doxi: minor fixups, rotate news.
+
 Sun Oct 22 22:37:16 2006  Tim Janik  <timj@gtk.org>
 
 	* launchers/suidmain.c: improved error message slightly.
