--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 NEXT-RELEASE:
+- fix bse.pc depending on mad.pc, libmad can be installed *without* a mad.pc file
 - GslLong -> int64 
 - wave-tool:
   * bit-width conversion float<->16 (optional saturation)
