--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,7 @@
+Tue Oct 24 23:51:55 2006  Tim Janik  <timj@gtk.org>
+
+	* sfitests.h (sfi_init_test): setup CPU name similar to birnet_init_test().
+
 Sat Oct 21 17:29:05 2006  Tim Janik  <timj@gtk.org>
 
 	* sfitests.h, sfiwrapper.cc: adapt to init settings changes.
