provide "SSE" as impl_name.
Tue Oct 24 23:55:45 2006 Tim Janik <timj@gtk.org>

        * bseblockutils.cc: provide "SSE" as impl_name.

svn path=/trunk/; revision=4038

--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,7 @@
+Tue Oct 24 23:55:45 2006  Tim Janik  <timj@gtk.org>
+
+	* bseblockutils.cc: provide "SSE" as impl_name.
+
 Mon Oct 23 16:10:57 2006  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* davorgan.idl:
