--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Thu Oct 26 00:15:53 2006  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* gslfilter.c (gsl_filter_sine_scan): More comments.
+
 Tue Oct 24 23:52:58 2006  Tim Janik  <timj@gtk.org>
 
 	* bseblockutils.hh, bseblockutils.cc: provide an block utils 
