--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Oct 30 22:09:25 2006  Tim Janik  <timj@gtk.org>
+
+	* r+d-files/: new directory for various Research & Development files
+	(scripts, docs, etc.) that aren't currently/actively/directly used by
+	the project.
+
 Mon Oct 30 19:12:12 2006  Tim Janik  <timj@gtk.org>
 
 	* tools/bsefextract.cc: some cosmetic fixups. fixed printf format strings 
