--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Tue Oct 31 14:23:33 2006  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* tests/audio/organsong.bse: Updated copyright/comment: melody is
+	based on music composed by J.S.Bach.
+
+	* tests/testresampler.cc: Use delay compensation API where
+	appropriate, instead of using the filter order to compute the
+	resampler delay.
+
 Mon Oct 30 23:57:03 2006  Tim Janik  <timj@gtk.org>
 
 	* r+d-files/bse-ellf.c: changed code generation to generate tables,
