--- a/TODO
+++ b/TODO
@@ -761,8 +761,9 @@ Misc Buglets/Feature Requests:
  - implement generic FIR eval (based on SIMD resampler code)
 
 The MCD timeline says:
-- resampler delay / latency
 + resampling datahandles: resampler state size
++ resampler BUG!: impulse response should start at sample 0 (--down) or at most 1 (--up),
+  but it does start at sample 1 or 2; this means unneccessary delay
 - wavetool commandos for upsampling and downsampling datahandles
 - low pass for wavetool
 - iir test
