--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Sat Nov  4 18:14:08 2006  Tim Janik  <timj@gtk.org>
+
+	* gslmathtest.c: removed, this has been ported to bsemathtest and
+	is long unused.
+
 Sat Nov  4 17:38:28 2006  Tim Janik  <timj@gtk.org>
 
 	* bsemath.h: don't include neither of the C++ <complex> or the C99
