--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Nov 15 00:25:16 2006  Tim Janik  <timj@gtk.org>
+
+	* data/bse.pc.in: added gobject to bse's link list.
+
 Tue Nov 14 01:15:00 2006  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* tools/bsewavetool.cc: Added upsample2 and downsample2 commands.
