--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,7 @@
+Wed Nov 15 00:27:55 2006  Tim Janik  <timj@gtk.org>
+
+	* bsequantizer.idl, bsequantizer.cc: added bit-quantization module.
+
 Tue Oct 24 23:55:45 2006  Tim Janik  <timj@gtk.org>
 
 	* bseblockutils.cc: provide "SSE" as impl_name.
